excluding Rmd files and Html files

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ train_dataset.Rmd
 test_dataset.Rmd
 project_01.Rmd
 unit_test.nb.html
+test_dataset.nb.html
+test_dataset.html
+test_dataset.md
+CodeBook.html
+CodeBook.nb.html
+CodeBook.Rmd
