excluding utility files

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ sandbox.nb.html
 somecode
 run_analysis.bak.R
 run_analysis_1735.R
+features_nice.csv
+features_nice.ods
+features_nice.xlsx
+features_nice_selected.csv
