exclude printing tests

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ features_nice.ods
 features_nice.xlsx
 features_nice_selected.csv
 sandbox.html
+features_nice_selected_documenting.xls
+test_variables_documentation.Rmd
+test_variables_documentation.html
+test_variables_documentation.nb.html
+test_variables_documentation.pdf
